crates/web/src/snapshots/sanic_web__tests__index_lists_owed_reviews_and_your_prs_like_the_tui.snap
---
source: crates/web/src/tests.rs
expression: "readable(&f, &page.body)"
---
<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="htmx-config" content="{&quot;includeIndicatorStyles&quot;:false,&quot;allowEval&quot;:false,&quot;allowScriptTags&quot;:false}">
<title>Dashboard · sanic-review</title>
<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
<link rel="stylesheet" href="/assets/style.css">
<link rel="stylesheet" href="/assets/syntax.css">
<script src="/assets/htmx.min.js" defer>
</script>
<script src="/assets/app.js" defer>
</script>
</head>
<body data-page="index" hx-headers="{&quot;x-csrf-token&quot;:&quot;<token>&quot;}">
<header class="topbar">
<a class="home" href="/">sanic-review</a>
<span class="counts" id="counts">
<b>0</b> queued · <b>0</b> running · <b class="cnt">3</b> pending drafts <span class="muted-sep">|</span> <a href="/settings">settings</a> · <span class="k">?</span> keys</span>
</header>
<main>
<form class="fside" id="filter" method="get" action="/" role="search" aria-label="Filter the lists" hx-get="/" hx-trigger="change, submit" hx-target="#panes" hx-select="#panes" hx-select-oob="#counts,#facets,#filter-n" hx-swap="outerHTML" hx-sync="#panes:replace">
<details id="filter-fold" open>
<summary>
<span class="fsh">Filter</span> <span class="fcount" id="filter-n">
</span>
<span class="ftoggle" aria-hidden="true">
</span>
</summary>
<div class="fsbody">
<input id="fq" type="search" name="q" value="" placeholder="title or #number" autocomplete="off" aria-label="words in the title or owner/name#N" hx-get="/" hx-trigger="input changed delay:250ms, search" hx-include="#filter">
<button class="btn fapply" type="submit">Filter</button>
<div id="facets">
<fieldset class="facet">
<legend>Status</legend>
<label class="fopt" for="f-status-6e656564732d796f75">
<input id="f-status-6e656564732d796f75" type="checkbox" name="status" value="needs-you">
<span class="fv">Needs you</span>
<span class="fn">2</span>
</label>
<label class="fopt" for="f-status-6e6f7468696e672d746f2d646f">
<input id="f-status-6e6f7468696e672d746f2d646f" type="checkbox" name="status" value="nothing-to-do">
<span class="fv">Nothing to do now</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-status-7265616479">
<input id="f-status-7265616479" type="checkbox" name="status" value="ready">
<span class="fv">Ready</span>
<span class="fn">1</span>
</label>
</fieldset>
<fieldset class="facet">
<legend>Author <span class="dim">reviews you owe</span>
</legend>
<label class="fopt" for="f-author-616c696365">
<input id="f-author-616c696365" type="checkbox" name="author" value="alice">
<span class="fv">@alice</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-author-626f62">
<input id="f-author-626f62" type="checkbox" name="author" value="bob">
<span class="fv">@bob</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-author-6361726f6c">
<input id="f-author-6361726f6c" type="checkbox" name="author" value="carol">
<span class="fv">@carol</span>
<span class="fn">1</span>
</label>
</fieldset>
<fieldset class="facet">
<legend>Repo</legend>
<label class="fopt" for="f-repo-6f72672f7265706f">
<input id="f-repo-6f72672f7265706f" type="checkbox" name="repo" value="org/repo">
<span class="fv">org/repo</span>
<span class="fn">4</span>
</label>
</fieldset>
<fieldset class="facet">
<legend>State</legend>
<label class="fopt" for="f-state-6368616e6765732d726571756573746564">
<input id="f-state-6368616e6765732d726571756573746564" type="checkbox" name="state" value="changes-requested">
<span class="fv">changes requested</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-state-6d6572676561626c65">
<input id="f-state-6d6572676561626c65" type="checkbox" name="state" value="mergeable">
<span class="fv">mergeable</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-state-64726166742d7072">
<input id="f-state-64726166742d7072" type="checkbox" name="state" value="draft-pr">
<span class="fv">draft PR</span>
<span class="fn">1</span>
</label>
<label class="fopt" for="f-state-756e7365656e">
<input id="f-state-756e7365656e" type="checkbox" name="state" value="unseen">
<span class="fv">
<span class="newdot">
</span> unseen review</span>
<span class="fn">1</span>
</label>
</fieldset>
</div>
</div>
</details>
</form>
<div id="panes" hx-get="/" hx-trigger="every 5s" hx-select="#panes" hx-select-oob="#counts,#facets,#filter-n" hx-swap="outerHTML" data-archived-href="/?archived=true">
<section class="list" id="owed">
<h2>Reviews you owe <span class="dim">3</span>
<span class="sp">
</span>
</h2>
<div class="colh" aria-hidden="true">
<span>
</span>
<span>
</span>
<span>REVIEWED BY · WAITING ON</span>
<span>PR</span>
</div>
<div class="group-h act">NEEDS YOU · 2</div>
<div class="ib" data-row data-key="org/repo#7" data-href="/pr/org/repo/7" data-ignore="/pr/org/repo/7/ignore" data-chat="/pr/org/repo/7#chat">
<span class="n">
<span class="newdot" title="a review you haven't looked at yet">
</span>
</span>
<span class="x">
<span class="pp" tabindex="0" aria-describedby="lead-org/repo#7">
<span class="cnt">3 drafts</span>
<span class="pop" role="tooltip" id="lead-org/repo#7">
<table>
<tr>
<td class="when">review run</td>
<td>succeeded, finished <time>
</td>
</tr>
<tr>
<td class="when">drafts</td>
<td>
<span class="cnt">3 pending</span>
</td>
</tr>
</table>
</span>
</span>
</span>
<span class="y">
<span class="rb" tabindex="0" aria-describedby="rb-org/repo#7">
<span class="none">no reviews</span>
<span class="pop" role="tooltip" id="rb-org/repo#7">
<div class="ph">head <b class="mono">head7</b>, first seen <time>
</div>
<p class="dim nobody">Nobody has reviewed it yet.</p>
<div class="foot">Each person's latest review; bots and dismissed reviews left out.</div>
</span>
</span>
<span class="needs">
<span class="sig you" title="comments by others you haven't answered">1 to answer</span>
</span>
</span>
<span class="t">
<a href="/pr/org/repo/7" title="Add the thing">Add the thing</a>
</span>
<span class="m">
<a class="ref" href="https://github.com/org/repo/pull/7" title="https://github.com/org/repo/pull/7">org/repo#7 ↗</a> · alice</span>
<span class="a">
<a class="linkbtn" href="/pr/org/repo/7/ignore">ignore by title <span class="k">i</span>
</a>
<a class="linkbtn" href="/pr/org/repo/7#chat">chat <span class="k">c</span>
</a>
<form class="archive" method="post" action="/pr/org/repo/7/archive">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="archived" value="true">
<input type="hidden" name="next" value="index">
<input type="hidden" name="back" value="/">
<button class="linkbtn" type="submit">archive <span class="k">x</span>
</button>
</form>
</span>
</div>
<div class="ib" data-row data-key="org/repo#8" data-href="/pr/org/repo/8" data-review-now="/pr/org/repo/8/review-now" data-ignore="/pr/org/repo/8/ignore">
<span class="n">
</span>
<span class="x">
<span class="pp" tabindex="0" aria-describedby="lead-org/repo#8">
<span class="chip bad">failed</span>
<span class="pop" role="tooltip" id="lead-org/repo#8">
<table>
<tr>
<td class="when">review run</td>
<td>failed <time>
</td>
</tr>
</table>
<pre class="error perr">claude exited with 1
and more detail</pre>
</span>
</span>
</span>
<span class="y">
<span class="rb" tabindex="0" aria-describedby="rb-org/repo#8">
<span class="none">no reviews</span>
<span class="pop" role="tooltip" id="rb-org/repo#8">
<div class="ph">head <b class="mono">head8</b>, first seen <time>
</div>
<p class="dim nobody">Nobody has reviewed it yet.</p>
<div class="foot">Each person's latest review; bots and dismissed reviews left out.</div>
</span>
</span>
<span class="needs">
</span>
</span>
<span class="t">
<a href="/pr/org/repo/8" title="Fix &lt;script&gt; escaping">Fix &lt;script&gt; escaping</a>
</span>
<span class="m">
<a class="ref" href="https://github.com/org/repo/pull/8" title="https://github.com/org/repo/pull/8">org/repo#8 ↗</a> · bob · <span class="u-quiet">changes requested</span>
</span>
<span class="a">
<a class="linkbtn" href="/pr/org/repo/8/review-now" data-dialog>review now <span class="k">r</span>
</a>
<a class="linkbtn" href="/pr/org/repo/8/ignore">ignore by title <span class="k">i</span>
</a>
<form class="archive" method="post" action="/pr/org/repo/8/archive">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="archived" value="true">
<input type="hidden" name="next" value="index">
<input type="hidden" name="back" value="/">
<button class="linkbtn" type="submit">archive <span class="k">x</span>
</button>
</form>
</span>
</div>
<details class="grp quiet" id="owed-quiet">
<summary>
<div class="group-h">NOTHING TO DO NOW · 1<span class="dim"> — skipped, archived, or done; r reviews one anyway</span>
</div>
</summary>
<div class="ib" data-row data-key="org/repo#10" data-href="/pr/org/repo/10" data-review-now="/pr/org/repo/10/review-now" data-ignore="/pr/org/repo/10/ignore">
<span class="n">
</span>
<span class="x">
<span class="pp" tabindex="0" aria-describedby="lead-org/repo#10">
<span class="chip dim">skipped: draft</span>
<span class="pop" role="tooltip" id="lead-org/repo#10">
<table>
<tr>
<td class="when">status</td>
<td>not reviewed automatically: it's a draft PR</td>
</tr>
<tr>
<td class="when">review run</td>
<td>none yet</td>
</tr>
</table>
</span>
</span>
</span>
<span class="y">
<span class="rb" tabindex="0" aria-describedby="rb-org/repo#10">
<span class="none">no reviews</span>
<span class="pop" role="tooltip" id="rb-org/repo#10">
<div class="ph">head <b class="mono">head10</b>, first seen <time>
</div>
<p class="dim nobody">Nobody has reviewed it yet.</p>
<div class="foot">Each person's latest review; bots and dismissed reviews left out.</div>
</span>
</span>
<span class="needs">
</span>
</span>
<span class="t">
<a href="/pr/org/repo/10" title="WIP: try things">WIP: try things</a>
</span>
<span class="m">
<a class="ref" href="https://github.com/org/repo/pull/10" title="https://github.com/org/repo/pull/10">org/repo#10 ↗</a> · carol · <span class="tagpr">draft PR</span>
</span>
<span class="a">
<a class="linkbtn" href="/pr/org/repo/10/review-now" data-dialog>review now <span class="k">r</span>
</a>
<a class="linkbtn" href="/pr/org/repo/10/ignore">ignore by title <span class="k">i</span>
</a>
<form class="archive" method="post" action="/pr/org/repo/10/archive">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="archived" value="true">
<input type="hidden" name="next" value="index">
<input type="hidden" name="back" value="/">
<button class="linkbtn" type="submit">archive <span class="k">x</span>
</button>
</form>
</span>
</div>
</details>
</section>
<section class="list" id="mine">
<h2>Your PRs <span class="dim">1</span>
<span class="sp">
</span>
</h2>
<div class="colh" aria-hidden="true">
<span>
</span>
<span>
</span>
<span>REVIEWED BY · WAITING ON</span>
<span>PR</span>
</div>
<div class="group-h">READY · 1</div>
<div class="ib" data-row data-key="org/repo#9" data-href="/pr/org/repo/9">
<span class="n">
</span>
<span class="x">
<span class="pp" tabindex="0" aria-describedby="lead-org/repo#9">
<span class="chip u-good">mergeable</span>
<span class="pop" role="tooltip" id="lead-org/repo#9">
<table>
<tr>
<td class="when">review run</td>
<td>none yet</td>
</tr>
</table>
</span>
</span>
</span>
<span class="y">
<span class="rb" tabindex="0" aria-describedby="rb-org/repo#9">
<span class="none">no reviews</span>
<span class="pop" role="tooltip" id="rb-org/repo#9">
<div class="ph">head <b class="mono">head9</b>, first seen <time>
</div>
<p class="dim nobody">Nobody has reviewed it yet.</p>
<div class="foot">Each person's latest review; bots and dismissed reviews left out.</div>
</span>
</span>
<span class="needs">
</span>
</span>
<span class="t">
<a href="/pr/org/repo/9" title="My change">My change</a>
</span>
<span class="m">
<a class="ref" href="https://github.com/org/repo/pull/9" title="https://github.com/org/repo/pull/9">org/repo#9 ↗</a>
</span>
<span class="a">
<form class="archive" method="post" action="/pr/org/repo/9/archive">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="archived" value="true">
<input type="hidden" name="next" value="index">
<input type="hidden" name="back" value="/">
<button class="linkbtn" type="submit">archive <span class="k">x</span>
</button>
</form>
</span>
</div>
</section>
<p class="help-foot">
<span class="k">j</span>
<span class="k">k</span> move (a folded group is skipped) · <span class="k">Tab</span> other list · <span class="k">Enter</span> open · <span class="k">r</span>
<span class="k">x</span>
<span class="k">i</span>
<span class="k">c</span> act on the selected row · <span class="k">v</span> reviewers · <span class="k">d</span> details · <span class="k">X</span> archived · <span class="k">?</span> all keys</p>
</div>
</main>
<div class="overlay" id="help" hidden>
<div class="popup">
<h2>Keys</h2>
<table>
<tr>
<th>
<kbd>q</kbd>
</th>
<td>close this help; otherwise back to the index</td>
</tr>
<tr>
<th>
<kbd>Tab, Shift-Tab</kbd>
</th>
<td>next, previous list</td>
</tr>
<tr>
<th>
<kbd>j/k, Down/Up</kbd>
</th>
<td>move in the list</td>
</tr>
<tr>
<th>
<kbd>g/G, Home/End</kbd>
</th>
<td>first, last row</td>
</tr>
<tr>
<th>
<kbd>Enter</kbd>
</th>
<td>open the selected PR</td>
</tr>
<tr>
<th>
<kbd>r</kbd>
</th>
<td>review now: failed, held or skipped (asks first)</td>
</tr>
<tr>
<th>
<kbd>x</kbd>
</th>
<td>archive or unarchive the selected PR</td>
</tr>
<tr>
<th>
<kbd>X</kbd>
</th>
<td>show or hide archived PRs</td>
</tr>
<tr>
<th>
<kbd>i</kbd>
</th>
<td>skip PRs with titles like the selected one</td>
</tr>
<tr>
<th>
<kbd>v</kbd>
</th>
<td>who reviewed the selected PR, and when; Esc closes</td>
</tr>
<tr>
<th>
<kbd>d</kbd>
</th>
<td>the selected PR's review run and drafts; Esc closes</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>chat with the agent that reviewed it: shows the command</td>
</tr>
<tr>
<th>
<kbd>f</kbd>
</th>
<td>on a PR page: the drafts, or the files changed with the drafts in them</td>
</tr>
<tr>
<th>
<kbd>s</kbd>
</th>
<td>in the files changed: one column, or old beside new</td>
</tr>
<tr>
<th>
<kbd>a</kbd>
</th>
<td>on a PR page: revise the selected draft with the agent, from a note</td>
</tr>
<tr>
<th>
<kbd>?, Esc</kbd>
</th>
<td>show, close this help</td>
</tr>
</table>
<p class="dim">On a PR page j/k move between drafts, and r and a act on the PR. On a confirm page y confirms and Esc or q cancels.</p>
</div>
</div>
<div class="overlay" id="dialog" hidden>
<div class="popup dialog" role="dialog" aria-modal="true">
</div>
</div>
<div id="notice" hidden>
</div>
</body>
</html>
