crates/web/src/snapshots/sanic_web__tests__nothing_is_posted_until_you_confirm_the_previewed_payload.snap
---
source: crates/web/src/tests.rs
expression: "readable(&f, &preview.body)"
---
<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="htmx-config" content="{&quot;includeIndicatorStyles&quot;:false,&quot;allowEval&quot;:false,&quot;allowScriptTags&quot;:false}">
<title>Submit review · sanic-review</title>
<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
<link rel="stylesheet" href="/assets/style.css">
<link rel="stylesheet" href="/assets/syntax.css">
<script src="/assets/htmx.min.js" defer>
</script>
<script src="/assets/app.js" defer>
</script>
</head>
<body data-page="confirm" hx-headers="{&quot;x-csrf-token&quot;:&quot;<token>&quot;}">
<header class="topbar">
<a class="home" href="/">sanic-review</a>
<span class="crumb">/ <a href="/pr/org/repo/7">org/repo#7</a>
</span>
<span class="crumb">/ submit</span>
<span class="counts" id="counts">
<a class="qlink" href="/queue" title="the run queue">
<b>0</b> queued · <b>0</b> running</a> · <b class="cnt">0</b> pending drafts <span class="muted-sep">|</span> <a href="/settings">settings</a> · <span class="k">?</span> keys</span>
</header>
<main>
<h1>Post this review?</h1>
<div class="sumline">
<span class="verdict-chip rc">REQUEST CHANGES</span>
<span>Add the thing <a class="ref" href="https://github.com/org/repo/pull/7" title="https://github.com/org/repo/pull/7">org/repo#7 ↗</a>
</span>
<span>body + 1 inline comment</span>
<span>at <code>head7</code>
</span>
</div>
<div class="cols">
<div>
<div class="check">
<h2>Check before posting</h2>
<ul>
<li>
<b>1</b> accepted comment(s) aren't on a line of the diff, so they're in the body, each headed by a link to its lines.</li>
</ul>
</div>
<h2 class="sec">Review body</h2>
<div class="rv">
<div class="md">
<p>Mostly fine; see inline.</p>
<p>
<strong>
<a href="https://github.com/org/repo/blob/head7/src/gone.rs?plain=1#L40" target="_blank" rel="noopener noreferrer nofollow">src/gone.rs:40</a>
</strong>
</p>
<p>This file isn't in the diff.</p>
</div>
</div>
<h2 class="sec">Inline comments <span class="dim">1</span>
</h2>
<div class="rv">
<div class="h">
<span class="mono">src/lib.rs:3</span>
<span class="sp">RIGHT</span>
</div>
<div class="md">
<p>Why <code>m</code>?</p>
</div>
</div>
</div>
<div class="wirecol">
<h2>Exactly what's sent · <code>POST /repos/org/repo/pulls/7/reviews</code>
</h2>
<pre class="wire">{
  &quot;commit_id&quot;: &quot;head7&quot;,
  &quot;body&quot;: &quot;Mostly fine; see inline.\n\n**[src/gone.rs:40](https://github.com/org/repo/blob/head7/src/gone.rs?plain=1#L40)**\n\nThis file isn't in the diff.&quot;,
  &quot;event&quot;: &quot;REQUEST_CHANGES&quot;,
  &quot;comments&quot;: [
    {
      &quot;path&quot;: &quot;src/lib.rs&quot;,
      &quot;body&quot;: &quot;Why `m`?&quot;,
      &quot;line&quot;: 3,
      &quot;side&quot;: &quot;RIGHT&quot;
    }
  ]
}</pre>
</div>
</div>
<form class="foot" id="confirm" method="post" action="/pr/org/repo/7/runs/1/submit">
<input type="hidden" name="csrf" value="<token>">
<input type="hidden" name="event" value="REQUEST_CHANGES">
<input type="hidden" name="payload" value="{&quot;left&quot;:null,&quot;review&quot;:{&quot;commit_id&quot;:&quot;head7&quot;,&quot;body&quot;:&quot;Mostly fine; see inline.\n\n**[src/gone.rs:40](https://github.com/org/repo/blob/head7/src/gone.rs?plain=1#L40)**\n\nThis file isn't in the diff.&quot;,&quot;event&quot;:&quot;REQUEST_CHANGES&quot;,&quot;comments&quot;:[{&quot;path&quot;:&quot;src/lib.rs&quot;,&quot;body&quot;:&quot;Why `m`?&quot;,&quot;line&quot;:3,&quot;side&quot;:&quot;RIGHT&quot;}]},&quot;replies&quot;:[],&quot;reactions&quot;:[]}">
<button class="btn go" type="submit">Confirm and post to GitHub<span class="k">y</span>
</button>
<a class="btn" id="cancel" href="/pr/org/repo/7?run=1">Back to the drafts<span class="k">Esc</span>
</a>
<span class="dim">Sent once, only if the drafts still match this preview.</span>
</form>
</main>
<div class="overlay" id="help" hidden>
<div class="popup">
<h2>Keys</h2>
<table>
<tr>
<th>
<kbd>q</kbd>
</th>
<td>close this help; otherwise back to the index</td>
</tr>
<tr>
<th>
<kbd>Tab, Shift-Tab</kbd>
</th>
<td>next, previous list</td>
</tr>
<tr>
<th>
<kbd>j/k, Down/Up</kbd>
</th>
<td>move in the list</td>
</tr>
<tr>
<th>
<kbd>g/G, Home/End</kbd>
</th>
<td>first, last row</td>
</tr>
<tr>
<th>
<kbd>Enter</kbd>
</th>
<td>open the selected PR</td>
</tr>
<tr>
<th>
<kbd>r</kbd>
</th>
<td>review now: failed, held or skipped (asks first)</td>
</tr>
<tr>
<th>
<kbd>x</kbd>
</th>
<td>archive or unarchive the selected PR</td>
</tr>
<tr>
<th>
<kbd>X</kbd>
</th>
<td>show or hide archived PRs</td>
</tr>
<tr>
<th>
<kbd>Q</kbd>
</th>
<td>the run queue: what's running and what's next</td>
</tr>
<tr>
<th>
<kbd>K/J</kbd>
</th>
<td>in the queue: move the selected queued run up, down</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>in the queue: cancel the selected run (asks first)</td>
</tr>
<tr>
<th>
<kbd>i</kbd>
</th>
<td>skip PRs with titles like the selected one</td>
</tr>
<tr>
<th>
<kbd>v</kbd>
</th>
<td>who reviewed the selected PR, and when; Esc closes</td>
</tr>
<tr>
<th>
<kbd>d</kbd>
</th>
<td>the selected PR's review run and drafts; Esc closes</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>chat with the agent that reviewed it: shows the command</td>
</tr>
<tr>
<th>
<kbd>f</kbd>
</th>
<td>on a PR page: the drafts, or the files changed with the drafts in them</td>
</tr>
<tr>
<th>
<kbd>s</kbd>
</th>
<td>in the files changed: one column, or old beside new</td>
</tr>
<tr>
<th>
<kbd>t</kbd>
</th>
<td>on a PR page: jump to its review threads</td>
</tr>
<tr>
<th>
<kbd>a</kbd>
</th>
<td>on a PR page: revise the selected draft with the agent, from a note</td>
</tr>
<tr>
<th>
<kbd>?, Esc</kbd>
</th>
<td>show, close this help</td>
</tr>
</table>
<p class="dim">On a PR page j/k move between drafts, and r and a act on the PR. On a confirm page y confirms and Esc or q cancels.</p>
</div>
</div>
<div class="overlay" id="dialog" hidden>
<div class="popup dialog" role="dialog" aria-modal="true">
</div>
</div>
<div id="notice" hidden>
</div>
</body>
</html>
