crates/web/src/snapshots/sanic_web__tests__queue_cancel_card.snap
---
source: crates/web/src/tests.rs
expression: "readable(&f, &waiting.body)"
---
<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<meta name="htmx-config" content="{&quot;includeIndicatorStyles&quot;:false,&quot;allowEval&quot;:false,&quot;allowScriptTags&quot;:false}">
<title>Cancel run · sanic-review</title>
<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
<link rel="stylesheet" href="/assets/style.css">
<link rel="stylesheet" href="/assets/syntax.css">
<script src="/assets/htmx.min.js" defer>
</script>
<script src="/assets/app.js" defer>
</script>
</head>
<body data-page="confirm" hx-headers="{&quot;x-csrf-token&quot;:&quot;<token>&quot;}">
<header class="topbar">
<a class="home" href="/">sanic-review</a>
<span class="counts" id="counts">
<a class="qlink" href="/queue" title="the run queue">
<b>1</b> queued · <b>1</b> running</a> · <b class="cnt">3</b> pending drafts <span class="muted-sep">|</span> <a href="/settings">settings</a> · <span class="k">?</span> keys</span>
</header>
<main>
<div class="cf">
<p class="kind">Cancel run</p>
<h1>Take this review out of the queue?</h1>
<div class="who">
<div class="t">WIP: try things</div>
<div class="m">
<a class="ref" href="https://github.com/org/repo/pull/10" title="https://github.com/org/repo/pull/10">org/repo#10 ↗</a> · carol · <code>head10</code>
</div>
<p class="extra">It never started, so nothing has been spent.</p>
</div>
<p class="cost">Nothing is posted to GitHub. <span class="k">r</span> reviews it again later.</p>
<div class="btns">
<form id="confirm" method="post" action="/queue/4/cancel">
<input type="hidden" name="csrf" value="<token>">
<button class="btn go" type="submit">Take it out of the queue <span class="k">y</span>
</button>
</form>
<a class="btn" id="cancel" href="/queue">Keep it<span class="k">Esc</span>
</a>
</div>
</div>
</main>
<div class="overlay" id="help" hidden>
<div class="popup">
<h2>Keys</h2>
<table>
<tr>
<th>
<kbd>q</kbd>
</th>
<td>close this help; otherwise back to the index</td>
</tr>
<tr>
<th>
<kbd>Tab, Shift-Tab</kbd>
</th>
<td>next, previous tab</td>
</tr>
<tr>
<th>
<kbd>j/k, Down/Up</kbd>
</th>
<td>move in the list</td>
</tr>
<tr>
<th>
<kbd>g/G, Home/End</kbd>
</th>
<td>first, last row</td>
</tr>
<tr>
<th>
<kbd>Enter</kbd>
</th>
<td>open the selected PR</td>
</tr>
<tr>
<th>
<kbd>r</kbd>
</th>
<td>review now: failed, held or skipped (asks first)</td>
</tr>
<tr>
<th>
<kbd>x</kbd>
</th>
<td>archive or unarchive the selected PR</td>
</tr>
<tr>
<th>
<kbd>X</kbd>
</th>
<td>show or hide archived PRs</td>
</tr>
<tr>
<th>
<kbd>Q</kbd>
</th>
<td>the run queue: what's running and what's next</td>
</tr>
<tr>
<th>
<kbd>K/J</kbd>
</th>
<td>in the queue: move the selected queued run up, down</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>in the queue: cancel the selected run (asks first)</td>
</tr>
<tr>
<th>
<kbd>i</kbd>
</th>
<td>skip PRs with titles like the selected one</td>
</tr>
<tr>
<th>
<kbd>v</kbd>
</th>
<td>who reviewed the selected PR, and when; Esc closes</td>
</tr>
<tr>
<th>
<kbd>d</kbd>
</th>
<td>the selected PR's review run and drafts; Esc closes</td>
</tr>
<tr>
<th>
<kbd>c</kbd>
</th>
<td>chat with the agent that reviewed it: shows the command</td>
</tr>
<tr>
<th>
<kbd>f</kbd>
</th>
<td>on a PR page: the drafts, or the files changed with the drafts in them</td>
</tr>
<tr>
<th>
<kbd>s</kbd>
</th>
<td>in the files changed: one column, or old beside new</td>
</tr>
<tr>
<th>
<kbd>a</kbd>
</th>
<td>on a PR page: revise the selected draft with the agent, from a note</td>
</tr>
<tr>
<th>
<kbd>?, Esc</kbd>
</th>
<td>show, close this help</td>
</tr>
</table>
<p class="dim">On a PR page j/k move between drafts, and r and a act on the PR. On a confirm page y confirms and Esc or q cancels.</p>
</div>
</div>
<div class="overlay" id="dialog" hidden>
<div class="popup dialog" role="dialog" aria-modal="true">
</div>
</div>
<div id="notice" hidden>
</div>
</body>
</html>
