crates/web/src/snapshots/sanic_web__tests__replies_go_in_the_review_and_the_preview_shows_every_request.snap
---
source: crates/web/src/tests.rs
expression: "readable(&f, cols)"
---
<div class="cols">
<div>
<div class="check">
<h2>Check before posting</h2>
<ul>
<li>
<b>1</b> draft(s) go as replies in existing threads, in the review. If a reply fails, the pending review is deleted, so nothing is posted.</li>
<li>
<b>1</b> 👍 go on existing comments, in place of those drafts' text, after the review.</li>
</ul>
</div>
<h2 class="sec">Review body</h2>
<div class="rv">
<div class="md">
<p>Mostly fine.</p>
</div>
</div>
<h2 class="sec">Inline comments <span class="dim">0</span>
</h2>
<h2 class="sec">Replies in existing threads <span class="dim">1</span>
</h2>
<div class="rv">
<div class="thread">
<div class="th">
<a class="anc" href="https://github.com/org/repo/pull/7/files#diff-b1a35a68f14e696205874893c07fd24fdb88882b47c23cc0e0c80a30c7d53759R3-R4" title="On GitHub, at the reviewed commit">src/lib.rs:3-4</a>
<span class="dim">1 comment</span>
<a class="gh" href="https://github.com/org/repo/pull/7#discussion_t-range">on GitHub ↗</a>
</div>
<ul class="said">
<li>
<b>bob</b>
<div class="md">
<p>Is <code>m</code> used anywhere?</p>
<p>It looks dead.</p>
</div>
</li>
</ul>
</div>
<div class="dim">draft 2, in reply:</div>
<div class="md">
<p>Why <code>m</code>?</p>
</div>
</div>
<h2 class="sec">👍 on existing comments <span class="dim">1</span>
</h2>
<div class="rv">
<div class="th">
<a class="anc" href="https://github.com/org/repo/pull/7/files#diff-b1a35a68f14e696205874893c07fd24fdb88882b47c23cc0e0c80a30c7d53759R3" title="On GitHub, at the reviewed commit">src/lib.rs:3</a>
<span class="chip dim">outdated</span>
<span class="dim">1 comment</span>
<a class="gh" href="https://github.com/org/repo/pull/7#discussion_t-outdated">on GitHub ↗</a>
</div>
<div>👍 on <b>dave</b>: <span class="excerpt" title="Why 2?">Why 2?</span>
</div>
<div class="dim">in place of draft 3</div>
</div>
</div>
<div class="wirecol">
<h2>Exactly what's sent, 1 of 5 · <code>POST /repos/org/repo/pulls/7/reviews</code>
</h2>
<pre class="wire">{
  &quot;commit_id&quot;: &quot;head7&quot;,
  &quot;body&quot;: &quot;Mostly fine.&quot;,
  &quot;comments&quot;: []
}</pre>
<h2>Exactly what's sent, 2 of 5 · <code>GraphQL addPullRequestReviewThreadReply, with</code>
</h2>
<pre class="wire">{
  &quot;body&quot;: &quot;Why `m`?&quot;,
  &quot;review&quot;: &quot;&lt;the id of the review created above&gt;&quot;,
  &quot;thread&quot;: &quot;t-range&quot;
}</pre>
<h2>Exactly what's sent, 3 of 5 · <code>GraphQL submitPullRequestReview, with</code>
</h2>
<pre class="wire">{
  &quot;body&quot;: &quot;Mostly fine.&quot;,
  &quot;event&quot;: &quot;COMMENT&quot;,
  &quot;review&quot;: &quot;&lt;the id of the review created above&gt;&quot;
}</pre>
<h2>Exactly what's sent, 4 of 5 · <code>GraphQL node (whether you've given it a 👍), with</code>
</h2>
<pre class="wire">{
  &quot;subject&quot;: &quot;t-outdated-c1&quot;
}</pre>
<h2>Exactly what's sent, 5 of 5 · <code>GraphQL addReaction (THUMBS_UP), unless you have, with</code>
</h2>
<pre class="wire">{
  &quot;subject&quot;: &quot;t-outdated-c1&quot;
}</pre>
</div>
</div>
